# cicd-goat

./: .gitignore  CONTRIBUTING.md  NOTICE  Pipfile  README.md  SAFETY.md  apply.sh  break-glass.md  docker-compose-dev.yaml  docker-compose.yaml  rename.py  wait.sh
.circleci/: config.yml
.github/workflows/: _reusable-build-and-test.yml  _reusable-deploy.yml  bump-pipeline-check.yml  regen-readme.yml  release.yaml  safety-check.yml  scanner-comparison.yml  scenario-01-prtarget-checkout-head.yml  scenario-02-script-injection-issue-title.yml  scenario-03-action-mutable-ref.yml  scenario-04-github-token-write-all.yml  scenario-05-cache-poisoning-pr-controlled.yml  scenario-06-reusable-secrets-inherit.yml  scenario-07-workflow-run-artifact-rce.yml  scenario-08-self-hosted-public-fork.yml  scenario-09-container-image-latest.yml  scenario-10-oidc-aws-wildcard-sub.yml  scenario-105-codecov-bash-uploader.yml  scenario-107-thirdparty-action-broad-secret.yml  scenario-108-deploy-no-environment.yml  scenario-109-selfhosted-deploy-no-gate.yml  scenario-11-pip-install-no-hashes.yml  scenario-12-persist-credentials-leak.yml  scenario-121-ai-prompt-injection.yml  scenario-122-trust-remote-code.yml  scenario-13-input-injection-workflow-dispatch.yml  scenario-14-env-injection-pr-body.yml  scenario-15-hardcoded-secret-env.yml  scenario-16-curl-pipe-sh.yml  scenario-17-artipacked-git-dir.yml  scenario-18-composite-action-input-injection.yml  scenario-19-codecov-style-installer.yml  scenario-20-dependency-confusion.yml  scenario-21-matrix-expansion-injection.yml  (+18 more)
ctfd/: Dockerfile
docs/: COVERAGE-AXES.md  FIELD-TEST.md  MATRIX.md  RULE-FIRINGS.md
gitea/: Dockerfile  Pipfile  app.ini  gitea.yaml  run.sh
gitlab/: Dockerfile  check_git.py  gitlab.tf  repositories.sh  run.sh
gitlab-runner/: Dockerfile  run.sh
jenkins-agent/: Dockerfile
jenkins-server/: Dockerfile  jenkins.yaml  plugins.txt  run.sh  secrets.properties
prod/: Dockerfile  authorized_keys  entrypoint.sh  reportcov.sh  sshd_config
scenarios/: README.md
scenarios-greylag/: README.md
scenarios/134-pypi-pyproject-build-system/: README.md  pyproject.toml
scenarios/139-cargo-git-buildrs/: Cargo.toml  README.md  build.rs
scenarios/140-cargo-alt-registry/: Cargo.toml  README.md
scenarios/140-cargo-alt-registry/.cargo/: config.toml
solutions/: caterpillar.md  cheshire-cat.md  dodo.md  dormouse.md  duchess.md  gryphon.md  hearts.md  mad-hatter.md  mock-turtle.md  twiddledum.md  white-rabbit.md
tests/: conftest.py  pytest.ini  test_caterpillar.py  test_cheschire_cat.py  test_dodo.py  test_duchess.py  test_gryphon.py  test_hearts.py  test_mad_hatter.py  test_mock_turtle.py  test_reportcov_and_dormouse.py  test_twiddle.py  test_white_rabbit.py  utils.py
tools/: actionlint-to-sarif.py  bump-pipeline-check.py  check-provider-files-safe.py  check-scenarios-gated.py  ciguard-scan-tree.py  comparison-report.py  pipeline-check-resource-scan.py  regen-readme.py  scenarios.yaml
(+2188 files in other folders)
